# AdventOfCode2020

./: .dir-locals.el  .envrc  AdventOfCode2020.cabal  README.md  bench.sh  bench_result  default.nix
src/: All.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  DayX.hs  Direction.hs  MainAll.hs  Path.hs  Utils.hs  day05_golf.py  day15.cpp  day18.sh  startday.sh
